site/css/wea.css
/* ... */
span[data-el='q']::after,
span[data-el='title'][data-level='a']::after{
    content:"”";
}


div[data-el='lg']{
    padding: .5em 0;
}

span[data-el='q'] span[data-el='q']::before{
    content:"‘";
}

span[data-el='q'] span[data-el='q']::after{
    content:"’";
}


/************************************************************************* NOTE MARKERS  */
.noteMarker{
    padding-left: .1rem;
    position: relative;
    top: .1rem;
}

.noteMarker > sup{
    vertical-align: baseline;
    position: relative;
    top: -.3rem;
}
.noteMarker:focus{
    outline: thin dotted;
}


/************************************************************************ POPUPS */

#popup{
    min-width:0;
    max-width:30rem;
    min-height:0;
    max-height:8rem;
    overflow-y:scroll;
}


#popup.hidden{
    display:none;
}

#popup.showing{
    position:absolute;
    word-wrap: break-word;
    font-size:1.2rem;
    background:white;
    padding:.7em;
    border: 1px solid #b9b9b9;
    border-radius: 9px;
    box-shadow: 1px 1px 1px #b9b9b9;
    display:block;
    animation: fade-in .5s;
    margin-left: .15rem;
    z-index:20;

}


#popup.showing.toolbar{
    max-width:30rem;
    
}



#popup::after, #popup::before {
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
}


#popup::after{
   	border-color: rgba(255, 255, 255, 0); 
   	border-width: 6px;
}

#popup::before{
    border-color: rgba(185, 185, 185, 0);
    border-width: 7.5px;
}


/* POPUP ARROWS */
#popup.right::after, #popup.right::before{
    right: 100%;
	top: 50%;
}

#popup.left::after, #popup.left::before{
    left: 100%;
	top: 50%;
}

#popup.top::after, #popup.top::before{
    top: 100%;
	left: 25%;
}
#popup.bottom_right::after, #popup.bottom_right::before{
    bottom: 100%;
	left: 10%;
}

#popup.bottom_left::after, #popup.bottom_left::before{
    bottom: 100%;
	left: 85%;
}


#popup h3{
    font-size:125%;
    font-weight:bold;
}



/* RIGHT ARROW */
#popup.right::after {
	border-right-color: white;
		/* THIS IS WHAT CONTROLS THE ARROW SIZE */
	margin-top: -6px;
}
#popup.right::before {
	border-right-color: transparent;;
    /* SHHOULD ALWAYS BE +BORERWIDTH */

	margin-top: -7.5px;
}

/* HORIZONTAL ARROWS */

#popup.right::after, #popup.left::after{
/* THIS IS WHAT CONTROLS THE ARROW SIZE */
   margin-top: -6px;
}

#popup.right::before, #popup.left::before{
margin-top: -7.5px;
}

/* VERTICAL ARROWS */

#popup.top::after, #popup.bottom_left::after, #popup.bottom_right::after{
    margin-left:-6px;
}

#popup.top::before, #popup.bottom_left::before, #popup.bottom_right::before{
  margin-left:-7.5px;
}


/* LEFT ARROW (I.E POINTING RIGHT) */
#popup.right::after {
	border-right-color: white;

}
#popup.right::before {
	border-right-color: #b9b9b9;
}

/* RIGHT */
#popup.left::after {
	border-left-color: white;

}

#popup.left::before {
	border-left-color: #b9b9b9;
}

/* TOP */
#popup.top::after {
	border-top-color: white;

}
#popup.top::before {
	border-top-color: #b9b9b9;
}

/* BOTTOM */
#popup.bottom_left::after,
#popup.bottom_right::after{
	border-bottom-color: white;

}
#popup.bottom_left::before,
#popup.bottom_right::before{
	border-bottom-color: #b9b9b9;
}


#popup.hidden{
    display:none;
   opacity:0;
}


#popup_content{
    margin: .5em .25em .25em .25em;
    font-size:75%;
}

#popup_content .returnToNote{
 display:none;   
}

#popup_closer{
    float:right;
    top:5rem;
    font-size:70%;
    color:black;
    font-weight:bold;
    cursor:pointer;
}


/***************************************************************************** ANIMATIONS */
@keyframes fade-in {
  from { 
    opacity: 0; 
  }
  to { 
    opacity: 1; 
  }
}



a{
    text-decoration:none;
}








[data-el='opener'] > [data-el='salute'],
[data-el='closer'] > [data-el='signed']{
    font-variant:small-caps;
    font-size: 105%;
}

[data-el='closer']{
    text-align:right;
    margin-right:.5rem;
}

[data-el='closer'] > [data-el='salute']{
    margin-right:1rem;
      display:block;
}

.JS #personography,
.JS #organizations{
    display:none;
}

div.facsButton{
    float: left;
    margin-left:-5rem;
    position: absolute;
    border: 1px solid black;
    vertical-align:middle;
   
}

div.facsButton:hover{
    background: floralwhite;

}

div.facsButton > a{
    width:100%;
    height:100%;
    padding: 1em;
    display:inline-block;
}
div.facsButton> a,
div.facsButton> a:visited,
div.facsButton> a:hover
{
    color:inherit;
    text-decoration:none;
}

/**************************************************************************** APPENDIX */


#appendix{
    max-width: var(--max-text-width);
    margin: 0 auto;
}

#appendix > div:first-child{
    padding-top: 1rem;
    margin-top: 2rem;
}

#appendix > div:before{
    content: "";
    display:block;
    border-top:1px solid #ccc;
    width:75%;
}





.returnToNote{
    min-width: 2rem;
}
.returnToNote::after{
    content:".";
}

#appendix div[data-el='note']{
    display:flex;
    text-align:justify;
}

#appendix div[data-el='note'] > div{
    display:inline;
    padding-right:2rem;
    
}

    
div[data-el=note] + div[data-el=note]{
    margin-top:.75rem;
}

#appendix h2{
    margin-bottom:2rem;
}



/************************************************************************** LISTS */


/* SIMPLE STUFF */
ul,li{
    list-style:none;
}


[data-el='list'][data-type='toc']{
    padding:.25rem;
}

[data-el='list'][data-type='toc'] > [data-el='item']{
    padding-left: .5rem;
}

[data-el='list'][data-type='toc'] > [data-el='item'] + [data-el='item']{
    padding-top:.25rem;
}

/************************************************************************** TABLES */

table {
    border-collapse: collapse;
    table-layout:fixed;
    margin: 0 auto;
    width: 100%;

}

tbody{
        word-break: break-word;
}

th{
    font-weight:normal;
}


td{
    padding:1rem;
}
.JS th.sortable{
    cursor:pointer;
}
/* ... */

